--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,6 +6,7 @@
     <array>
       <string>sms</string>
       <string>tel</string>
+      <string>mailto</string>
     </array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need to access your photo library </string>
